# hshud3838840-public

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  Gradmotion CLI Skill使用教程——AI Agent 驱动的机器人训练工作流.docx  SKILL.md  THIRD_PARTY_LICENSES  conftest.py  install_deps.sh  models  mypy.ini  pyproject.toml  run_train.py  run_train.sh
src/holosoma/: MANIFEST.in  README.md  pyproject.toml  setup.py
src/holosoma/holosoma/: eval_agent.py  replay.py  run_sim.py  train_agent.py
src/holosoma/holosoma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/holosoma/holosoma/bridge/: __init__.py
src/holosoma/holosoma/config_types/: action.py  algo.py  command.py  curriculum.py  env.py  eval_callback.py  experiment.py  full_sim.py  logger.py  observation.py  randomization.py  reward.py  robot.py  run_sim.py  simulator.py  termination.py  terrain.py  video.py  viewer.py
src/holosoma/holosoma/config_values/: action.py  algo.py  command.py  curriculum.py  experiment.py  logger.py  observation.py  randomization.py  reward.py  robot.py  run_sim.py  simulator.py  termination.py  terrain.py
src/holosoma/holosoma/data/: __init__.py
src/holosoma/holosoma/managers/: __init__.py  utils.py
src/holosoma/holosoma/simulator/: __init__.py  types.py
src/holosoma/holosoma/utils/: average_meters.py  clock.py  common.py  config_utils.py  draw.py  eval_utils.py  experiment_paths.py  file_cache.py  helpers.py  inference_helpers.py  logging.py  module_utils.py  path.py  rate.py  rotations.py  safe_torch_import.py  sim_utils.py  simulator_config.py  terrain_utils.py  torch_jit.py  torch_utils.py  tyro_utils.py  video_utils.py  wandb.py  warp_utils.py
src/holosoma/tests/: __init__.py
src/holosoma/tests/simulators/: __init__.py  test_camera_controller.py
src/holosoma/tests/utils/: __init__.py  test_file_cache.py  test_onnx_export.py  test_torch_jit.py
src/holosoma_retargeting/: pyproject.toml  setup.py
src/holosoma_retargeting/docker/: Dockerfile
src/holosoma_retargeting/holosoma_retargeting/: .gitignore  ADD_MOTION_FORMAT_README.md  ADD_ROBOT_TYPE_README.md  README.md  __init__.py  viser_player.py
src/holosoma_retargeting/holosoma_retargeting.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/holosoma_retargeting/holosoma_retargeting/config_types/: __init__.py  data_conversion.py  data_type.py  retargeter.py  retargeting.py  robot.py  task.py  viser.py
src/holosoma_retargeting/holosoma_retargeting/config_values/: __init__.py  data_conversion.py  data_type.py  robot.py  viser.py
src/holosoma_retargeting/holosoma_retargeting/data_conversion/: convert_data_format_mj.py  convert_g1_to_hu_d04.py  viser_body_vel_player.py
(+2464 files in other folders)
