[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holosoma-retargeting"
version = "0.1.0"
description = "Retargeting utilities for converting human motions to robot motions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Amazon FAR Team" },
]
dependencies = [
    # Needs to ping numpy to 2.3.5;
    # reason: later numpy version such as 2.4 will trigger
    # "TypeError: only 0-dimensional arrays can be converted to Python scalars"
    # in yourdf/urdf.py::1078 when converting float(q)
    "numpy==2.3.5",
    "torch",
    "tqdm",
    "scipy",
    "matplotlib",
    "trimesh",
    "smplx",
    "jinja2",
    "mujoco",
    "viser",
    "robot_descriptions",
    "yourdfpy",
    "cvxpy",
    "libigl",
    "tyro",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["holosoma_retargeting*"]
